# salmon-computer-vision

./: .gitignore  .gitmodules  .vimrc  LICENSE  LICENSE-Model.md  README-old.md  README.md  Video_data.csv  create_dataset_salmon.py  create_tfrecords.py  extracted_vids.txt  run_tf_docker.sh  train.sh  train_class.py
counting/: demo.py
training/object-detection/: .gitignore  01_raw.dvc  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
training/object-detection/.dvc/: config
training/object-detection/config/: salmon_yolo.yaml  site_resolve_independent_bars.vl.json  site_resolve_independent_bars_with_values.vl.json
training/object-detection/data/01_raw/: .gitignore  salmon_vid_counts.csv.dvc  salmon_vid_counts_summary.csv.dvc  sv_water_conditions.dvc
training/object-detection/data/02_interim/: .gitignore
training/object-detection/data/03_processed/: .gitignore
training/object-detection/data/04_dataset/: .gitignore
training/object-detection/data/04_dataset/salmon_dataset/dataset_sharded/: .gitignore
training/object-detection/data/04_dataset/salmon_dataset/site_eval_workdir/: .gitignore
training/object-detection/data/04_dataset/salmon_dataset/site_manifests/: .gitignore
training/object-detection/data/04_dataset/salmon_dataset/training/: .gitignore
training/object-detection/dvclive/: params.yaml
training/object-detection/scripts/: build_video_metadata_index.py  create_condition_negatives.py  crop_site_frames.py  eval_yolo.py  fix_yolo_data_yaml.py  make_site_eval_workdir.py  make_site_manifests.py  make_splits.py  make_train_small.py  pack_split_dataset.py  plot-all-eval.sh  plot_site_class_stats.py  rewrite_manifest_absolute.py  run_site_eval_experiments.py  summarize_tune_results.py  train_yolo_best.py  tune_yolo.py  unpack_annos.sh  yolo_converter_ls_video.py
training/object-detection/src/object_detection/analysis/: cli.py  plots.py
training/object-detection/src/object_detection/eval/: cli.py  evaluate.py
training/object-detection/src/object_detection/frames/: cli.py  extractor.py  parsing.py
training/object-detection/src/object_detection/metadata/: cli.py  index.py
training/object-detection/src/object_detection/negatives/: cli.py  conditions.py
training/object-detection/src/object_detection/preprocessing/: cli.py  crop_sites.py
training/object-detection/src/object_detection/sampling/: cli.py  subset.py
training/object-detection/src/object_detection/site_splits/: cli.py  filter.py
training/object-detection/src/object_detection/splits/: cli.py  parsing.py  splitter.py
training/object-detection/src/object_detection/training/: cli.py  data_yaml.py  manifests.py  train_best.py
training/object-detection/src/object_detection/tuning/: cli.py  search_space.py  tune.py
training/object-detection/src/object_detection/utils/: utils.py
training/object-detection/src/object_detection/yolo_ls/: cli.py  converter.py  parsing.py  shards.py
training/object-detection/tests/: conftest.py  test_frames_cli.py  test_frames_extractor.py  test_frames_parsing.py  test_negatives_cli.py  test_negatives_conditions.py  test_splits_cli.py  test_splits_parsing.py  test_splits_splitter.py  test_utils.py  test_utils_utils.py  test_yolo_ls_cli.py  test_yolo_ls_converter.py  test_yolo_ls_parsing.py  test_yolo_ls_shards.py
utils/: cam.py  (+43 more)
(+186 files in other folders)
